[gd_scene load_steps=6 format=3 uid="uid://bctakxrfgwaor"]

[ext_resource type="Script" path="res://src/node/material_select_popup.gd" id="1_26x0c"]
[ext_resource type="Shader" path="res://shaders/fill.gdshader" id="2_2bwdp"]
[ext_resource type="Texture2D" uid="uid://bej0ujfdimntj" path="res://icons/font_awesome/magnifying-glass-solid.svg" id="3_3on70"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rgyto"]
bg_color = Color(0.133333, 0.133333, 0.133333, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.529067, 0.529067, 0.529066, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fw16f"]
shader = ExtResource("2_2bwdp")
shader_parameter/fill_color = Color(1, 1, 1, 1)

[node name="MaterialSelectPopup" type="Popup"]
size = Vector2i(240, 320)
visible = true
wrap_controls = false
script = ExtResource("1_26x0c")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rgyto")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2
placeholder_text = "Search..."

[node name="Sprite2D" type="Sprite2D" parent="PanelContainer/VBoxContainer/LineEdit"]
material = SubResource("ShaderMaterial_fw16f")
position = Vector2(222, 16)
scale = Vector2(0.04, 0.04)
texture = ExtResource("3_3on70")

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ListContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="text_changed" from="PanelContainer/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
